# music-profiler-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
MusicProfiler/cli/: main.py
MusicProfiler/core/: __init__.py  engine.py  pipeline.py
MusicProfiler/i18n/: __init__.py
MusicProfiler/i18n/locales/: en_US.json  zh_CN.json
MusicProfiler/models/: __init__.py  playlist.py  song.py  task.py
MusicProfiler/services/: __init__.py  demucs.py  ffmpeg.py  metadata.py  unlock.py
MusicProfiler/storage/: __init__.py  base.py  playlists.py  songs.py  tasks.py
exlib/um-main/cli/: go.mod  go.sum
exlib/um-main/cli/algo/qmc/: key_mmkv.go
exlib/um-main/web/: LICENSE
tests/: test_cli.py  test_models.py  test_pipeline.py  test_storage.py
